Fixed title overflow on small screens.

--- a/style/main.css
+++ b/style/main.css
@@ -71,6 +71,10 @@ nav h3{
     color: var(--nav-accent-color);
 }
 
+.wide-title{
+    width: 70%;
+}
+
 /* nav links should take up 30px vertically */
 nav a{
     text-decoration: none;
